{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 689,
  "lineage": "2e04f040-8f8f-8e70-402d-7ef749c337d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d12827901850737b",
            "association_id": "eipassoc-0bdb105cc8dfcfadf",
            "domain": "vpc",
            "id": "eipalloc-0d12827901850737b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09e29db39c236b658",
            "private_dns": "ip-10-0-0-19.us-west-2.compute.internal",
            "private_ip": "10.0.0.19",
            "public_dns": "ec2-52-33-241-241.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.241.241",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_internet_gateway",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "loadbalancer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eadec0c1e77c64aa",
            "domain": "vpc",
            "id": "eipalloc-0eadec0c1e77c64aa",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-238-90-125.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.90.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_internet_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:internet-gateway/igw-04c75cfcd7ba414f2",
            "id": "igw-04c75cfcd7ba414f2",
            "owner_id": "937564934877",
            "tags": {
              "Name": "principal-igw"
            },
            "tags_all": {
              "Name": "principal-igw"
            },
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:937564934877:loadbalancer/app/terraform-alb/f50853b7d3e28997",
            "arn_suffix": "app/terraform-alb/f50853b7d3e28997",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-145595547.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:937564934877:loadbalancer/app/terraform-alb/f50853b7d3e28997",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb",
            "security_groups": [
              "sg-0c3a3e0a1577eb095"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d04f25367a0933c4"
              },
              {
                "subnet_id": "subnet-0f6e4fcafa908ec02"
              }
            ],
            "subnets": [
              "subnet-0d04f25367a0933c4",
              "subnet-0f6e4fcafa908ec02"
            ],
            "tags": {
              "Name": "terraform-alb"
            },
            "tags_all": {
              "Name": "terraform-alb"
            },
            "vpc_id": "vpc-02e80703466a4230e",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.permetre_http_s",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "escolta_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:937564934877:listener/app/terraform-alb/f50853b7d3e28997/a4ee7132ab231295",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:937564934877:targetgroup/targetgrouplb/2f54815cf8ea0e9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:937564934877:listener/app/terraform-alb/f50853b7d3e28997/a4ee7132ab231295",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:937564934877:loadbalancer/app/terraform-alb/f50853b7d3e28997",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer",
            "aws_lb_target_group.test",
            "aws_security_group.permetre_http_s",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:937564934877:targetgroup/targetgrouplb/2f54815cf8ea0e9d",
            "arn_suffix": "targetgroup/targetgrouplb/2f54815cf8ea0e9d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:937564934877:targetgroup/targetgrouplb/2f54815cf8ea0e9d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetgrouplb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d12827901850737b",
            "connectivity_type": "public",
            "id": "nat-0bfd6814e00f41953",
            "network_interface_id": "eni-09e29db39c236b658",
            "private_ip": "10.0.0.19",
            "public_ip": "52.33.241.241",
            "subnet_id": "subnet-0f6e4fcafa908ec02",
            "tags": {
              "Name": "nat_illa"
            },
            "tags_all": {
              "Name": "nat_illa"
            }
          },
          "dependencies": [
            "aws_eip.loadbalancer",
            "aws_internet_gateway.main_internet_gateway",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eadec0c1e77c64aa",
            "connectivity_type": "public",
            "id": "nat-063a415775710387f",
            "network_interface_id": "eni-08cbba1624098fb6e",
            "private_ip": "10.0.1.138",
            "public_ip": "44.238.90.125",
            "subnet_id": "subnet-0d04f25367a0933c4",
            "tags": {
              "Name": "nat_illa2"
            },
            "tags_all": {
              "Name": "nat_illa2"
            }
          },
          "dependencies": [
            "aws_eip.loadbalancer2",
            "aws_internet_gateway.main_internet_gateway",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route_pr1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-070a95fbbf57f42751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bfd6814e00f41953",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070a95fbbf57f4275",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat1",
            "aws_route_table.main_private_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route_pu1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c75cfcd7ba414f2",
            "id": "r-rtb-0d68a7086ad9d3bab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d68a7086ad9d3bab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_internet_gateway",
            "aws_route_table.main_public_rt_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:route-table/rtb-070a95fbbf57f4275",
            "id": "rtb-070a95fbbf57f4275",
            "owner_id": "937564934877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bfd6814e00f41953",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "principal_private_rt"
            },
            "tags_all": {
              "Name": "principal_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:route-table/rtb-0b1377ea00e32fbd9",
            "id": "rtb-0b1377ea00e32fbd9",
            "owner_id": "937564934877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-063a415775710387f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "principal_private_rt2"
            },
            "tags_all": {
              "Name": "principal_private_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.loadbalancer2",
            "aws_internet_gateway.main_internet_gateway",
            "aws_nat_gateway.nat2",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:route-table/rtb-0d68a7086ad9d3bab",
            "id": "rtb-0d68a7086ad9d3bab",
            "owner_id": "937564934877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c75cfcd7ba414f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "principal_public_rt_1"
            },
            "tags_all": {
              "Name": "principal_public_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_private1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052f3a41ac6f53ec7",
            "route_table_id": "rtb-070a95fbbf57f4275",
            "subnet_id": "subnet-0c4b24eb932da5c67"
          },
          "dependencies": [
            "aws_route_table.main_private_rt",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_private2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da5fa2030ccab49b",
            "route_table_id": "rtb-070a95fbbf57f4275",
            "subnet_id": "subnet-0afd3b221fafc0f08"
          },
          "dependencies": [
            "aws_route_table.main_private_rt",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a881107fe3efb858",
            "route_table_id": "rtb-0d68a7086ad9d3bab",
            "subnet_id": "subnet-0f6e4fcafa908ec02"
          },
          "dependencies": [
            "aws_route_table.main_public_rt_1",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_public_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033e9233affe73fed",
            "route_table_id": "rtb-0d68a7086ad9d3bab",
            "subnet_id": "subnet-0d04f25367a0933c4"
          },
          "dependencies": [
            "aws_route_table.main_public_rt_1",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "permetre_http_s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:security-group/sg-0c3a3e0a1577eb095",
            "description": "Permetre trafic HTTP i HTTPS inbound (entrada a la publica)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3a3e0a1577eb095",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "permetre_trafic_http_s",
            "name_prefix": "",
            "owner_id": "937564934877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permetre_http_s"
            },
            "tags_all": {
              "Name": "permetre_http_s"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:subnet/subnet-0c4b24eb932da5c67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4b24eb932da5c67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937564934877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:subnet/subnet-0afd3b221fafc0f08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afd3b221fafc0f08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937564934877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:subnet/subnet-0f6e4fcafa908ec02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6e4fcafa908ec02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937564934877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:subnet/subnet-0d04f25367a0933c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04f25367a0933c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937564934877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02e80703466a4230e"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937564934877:vpc/vpc-02e80703466a4230e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0039e34968cd92b70",
            "default_route_table_id": "rtb-0d54c9c77dfa786b3",
            "default_security_group_id": "sg-0103e1881b0f56ae1",
            "dhcp_options_id": "dopt-03f30976d17c7d1c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02e80703466a4230e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d54c9c77dfa786b3",
            "owner_id": "937564934877",
            "tags": {
              "Name": "principal"
            },
            "tags_all": {
              "Name": "principal"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}